# protocol_management_system

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
src/: db.sqlite3
src/management_system/: __init__.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  snippets.py  urls.py  views.py
src/management_system/migrations/: 0001_initial.py  0002_alter_item_item_it_alter_item_item_kk_and_more.py  0003_protocol_protocolitem.py  0004_alter_protocol_barcode_alter_protocol_is_return.py  0005_protocol_employee.py  0006_alter_protocol_barcode.py  0007_remove_protocol_employee.py  0008_protocol_employee.py  0009_protocolitem_protocol_id.py  0010_protocolitem_employee_id.py  0011_remove_protocolitem_employee_id.py  0012_protocolitem_item_id.py  0013_alter_protocol_created_alter_protocol_description_and_more.py  0014_alter_item_item_it_alter_item_item_kk_and_more.py  0015_protocol_barcode_img_alter_protocol_is_return.py  0016_alter_protocol_barcode_img.py  0017_protocol_barcode_code.py  0018_remove_protocol_barcode_alter_protocol_barcode_img.py  0019_rename_barcode_code_protocol_barcode.py  0020_alter_protocol_barcode.py  0021_item_item_user.py  0022_itemcategory_alter_item_item_user.py  0023_item_category.py  0024_item_item_model_item_item_producent_and_more.py  0025_remove_item_item_name_alter_item_item_model.py  0026_protocol_created_by.py  (+29 more)
src/management_system_api/: apps.py  filtersets.py  serializers.py  urls.py  views.py
src/raports/: apps.py  urls.py  views.py
src/src/: settings.py  urls.py
src/templates/: main.html  sidebar.html
src/users/: models.py  urls.py
(+161 files in other folders)
